# vecli

./: .gitignore  CHANGELOG.md  Cargo.toml  GUIDE.md  LICENSE.md  README.md
.github/workflows/: deploy.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/core-concepts/: commands.md  context.md  flags.md  subcommands.md
docs/src/getting-started/: configuring-your-app.md  first-app.md  installation.md
docs/src/terminal/: terminal.md
examples/: taskr.rs
src/: app.rs  commands.rs  flags.rs  lib.rs  main.rs  terminal.rs  utils.rs
