[package]
name = "vecli"
version = "0.3.1"
edition = "2024"
description = "A zero-dependency, minimal CLI framework that's genuinely readable."
license-file = "LICENSE.md"
repository = "https://github.com/razkar-studio/vecli"
readme = "README.md"
keywords = ["cli", "terminal", "framework", "args"]
categories = ["command-line-interface"]
documentation = "https://docs.rs/vecli"
